# Otter

./: .env.example  .gitignore  .otter.toml.example  CHANGELOG.md  CLEANUP_SUMMARY.md  DOCS_INVENTORY.md  EXAMPLES_CLEANUP_PLAN.md  Makefile  README.md  TEST_CLEANUP_PLAN.md  TEST_FIXES_SUMMARY.md  TODO.md  mkdocs.yml  pyproject.toml  pytest.ini
configs/: init.lua
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DAP_BOOTSTRAP.md  DAP_BREAKPOINT_FIX.md  DEBUG_ENHANCEMENTS_SUMMARY.md  DEBUG_SESSION_TRACKING.md  DEBUG_TOOLS_ENHANCED.md  DEBUG_TRANSPARENCY.md  DEPENDENCIES.md  DEVELOPMENT.md  GENERIC_RUNTIME_RESOLVER.md  GETTING_STARTED.md  LANGUAGE_RUNTIME_CONFIG.md  NVIM_CONFIG_FLOW.md  NVIM_CONFIG_REDESIGN.md  NVIM_CONFIG_SIMPLIFIED.md  NVIM_SIMPLIFICATION_SUMMARY.md  QUICK_START_NVIM_CONFIG.md  README.md  ROADMAP.md  RUNTIME_RESOLVER_IMPLEMENTATION.md  SPECIFICATION.md  TECHNICAL_GUIDE.md  TESTING.md  TEST_IMPROVEMENTS.md  UNIFIED_CONFIG.md  USER_GUIDE.md  WHY.md
docs_site/: README.md  gen_ref_pages.py  index.md
examples/: README.md  basic_usage.py  debug_pytest.py  debug_server.py  debug_uvicorn.py  fullstack-project.otter.toml  minimal_debug_test.py  python-project.otter.toml  test_ai_features.py  test_bootstrap.py  test_buffer_editing.py  test_clean_exit.py  test_crash.py  test_crash_exit.py  test_crash_for_query.py  test_cross_project_debug.py  test_debug_crash_detection.py  test_error_exit.py  test_find_replace.py  test_instant_crash.py  test_llm_infrastructure.py  test_mcp_session_query.py  test_persist_crash_info.py  test_simple.py  test_smart_ai_features.py  (+4 more)
(+124 files in other folders)
