[project]
name = "Otter"
version = "0.0.1-rc1"
description = "🦦 The IDE for Agents 🦦"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.45",
    "pynvim>=0.6.0",
    "mcp[cli]>=1.15.0",
]

[project.scripts]
otter-server = "otter.mcp_server:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.13.2",
]
